# IT

./: .travis.yml  .travis.yml.swp  CMakeLists.txt  CMakeLists.txt.in  README.md
ci/travis/: .install-linux.sh.swp  .travis.yml  install-linux.sh
include/: count_time.h  dynamic_employee_DB.h  employee_DB.h  employee_types.h  static_employee_DB.h
inlcude/: task_one.h
libs/: dynamic_employee_DB.c  employee_DB.c  static_employee_DB.c
src/: count_time.c  dynamic_library_main.c  main.c  static_library_main.c  task_one.c
test/: CMakeLists.txt  Calculate.cpp  Determinate.cpp  IO.cpp  IODots.cpp  InputDots.cpp  InputNumbers.cpp  calculate.cpp  determinate.cpp
test/functional_tests/: functional.cpp
test/inputTest/IO/: DoubleInput  NegativeNumberInput  WrongInput  test4  test6
test/inputTest/IODots/: DoubleInput  test3  test4
test/stress_tests/: stress.cpp
test/test_files/functional_test/: first_employees  output_dynamic  output_static  second_employees
test/test_files/invalid_case/: employees
test/test_files/regular_case/: employees
test/test_files/same_surname_case/: employees  true_output
test/test_files/stress_test/: output_static
test/unit_tests/: fill_structure.cpp  surname_sort.cpp
